overflow fix 2

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
     top: 0;
     height: 0;
     width: 100vw;
-    height: 100vh;
+    height: 93vh;
     background-image: url(./public/background-big.png);
     background-repeat: no-repeat;
     background-position: center;
